--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,10 @@ pids
 *.vim
 .ignore
 
+# admin sdk
+test-lms-addbase-firebase-adminsdk*.json
+
+
 # lock files
 package-lock.json
 pnpm-lock.yaml
